# QuantLab

./: .gitignore  README.md  pyproject.toml
config/: base.toml
docs/: architecture.md  data-flow.md
examples/: binance_historical_import.py  binance_realtime_demo.py  data_platform_demo.py  factor_research_demo.py  microstructure_demo.py  momentum_pipeline.py
notebooks/: README.md
scripts/: check_ui_architecture.py  run_feature_pipeline.py  run_streamlit.sh
src/cLab/: __init__.py
src/cLab/app/: api.py  cli.py  schemas.py
src/cLab/config/: __init__.py  db_cfg.py  settings.py
src/cLab/core/: datasets.py  errors.py  types.py
src/cLab/pipelines/: __init__.py  aggtrades_pipeline.py  backtest_pipeline.py  bars_pipeline.py  data_pipeline.py  feature_pipeline.py  get_data.py  research_pipeline.py
src/cLab/ui/: stream.py  streamlit_app.py
src/cLab/viz/: __init__.py  streamlit_app.py
src/quantlab/: __init__.py  __main__.py  cli.py
src/quantlab/api/: __init__.py  app.py
src/quantlab/app/: bootstrap.py  events.py  job_bindings.py  runtime.py
src/quantlab/backtest/: __init__.py  costs.py  engine.py  metrics.py
src/quantlab/config/: __init__.py  loader.py  models.py
src/quantlab/core/: __init__.py  clock.py  enums.py  event_log.py  events.py  interfaces.py  (+4 more)
src/ui/: __init__.py  stream.py  streamlit_app.py
tests/: demo_jobs.py  test_aggtrades_1m.py  test_api.py  test_async_task_runtime.py  test_backtest_engine.py  test_binance_historical.py  test_binance_realtime.py  test_config_loader.py  test_data_platform.py  test_factor_research.py  test_filedb_pathlayout.py  test_formulaic_mining.py  test_imports.py  test_live_market_data.py  test_market_data_adapters.py  test_regime_modeling.py  test_registry.py  test_research_pipeline.py  test_synthetic_depth_and_regime_overlay.py  test_ts_store.py
webui/: .eslintrc.cjs  README.md  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.json
webui/docs/: api-design.md
webui/scripts/: generate-types.mjs
webui/src/: main.tsx
(+231 files in other folders)
