[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.1.0"
description = "A quantitative trading laboratory for futures and stocks analysis"
readme = "readme.md"
requires-python = ">=3.8"
authors = [
    {name = "QuantLab Team"}
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pytdx>=1.72",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

viz = [
    "streamlit>=1.31",
    "plotly>=5.18",
    "jupyterlab>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
