[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.1.0"
description = "Institutional-style quantitative research and trading platform skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.4.0",
  "pyarrow>=18.0.0",
  "pytz>=2024.1",
  "requests>=2.32.0"
]
authors = [
  { name = "QuantLab" }
]
license = { text = "Proprietary" }
keywords = ["quant", "trading", "research", "backtest", "systematic"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Office/Business :: Financial :: Investment"
]

[project.scripts]
quantlab = "quantlab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
live = ["python-binance"]
api = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
